--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,11 +45,14 @@
 
         <TextView
             android:id="@+id/First_NumTv"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/circle_blue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:visibility="visible"
             android:visibility="gone"
-            android:layout_margin="15dp"
+            android:layout_margin="10dp"
             android:text="1"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -58,7 +61,9 @@
             android:id="@+id/Second_NumTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
             tools:visibility="visible"
             android:visibility="gone"
             android:text="1"
@@ -69,7 +74,9 @@
             android:id="@+id/Thrid_NumTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
             tools:visibility="visible"
             android:visibility="gone"
             android:text="1"
@@ -80,7 +87,9 @@
             android:id="@+id/Fourth_NumTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
             tools:visibility="visible"
             android:visibility="gone"
             android:text="1"
@@ -91,9 +100,24 @@
             android:id="@+id/Fifth_NumTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
             tools:visibility="visible"
             android:visibility="gone"
+            android:text="1"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/Six_NumTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/white"
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:layout_margin="10dp"
             android:text="1"
             android:textSize="18sp"
             android:textStyle="bold"/>
